feat: use retrofit and rxjava

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,10 @@ buildscript {
         retrofit_version = '2.4.0'
         mockito_version = '2.11.0'
         junit_version = '4.12'
+        rxAndroid_version = '2.0.2'
+        rxJava_version = '2.1.16'
         android_plugin = "3.1.3"
+        okhttp_version = '3.11.0'
 
         // sdk
         compile_sdk = 28
