--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,19 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:28.0.0-alpha3'
-    kapt "com.android.databinding:compiler:$android_plugin"
     implementation "android.arch.lifecycle:extensions:$arch_comp"
+    kapt "com.android.databinding:compiler:$android_plugin"
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
+    // RxJava
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroid_version"
+    implementation "io.reactivex.rxjava2:rxjava:$rxJava_version"
 
     // Test
     testImplementation "junit:junit:$junit_version"
