--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".application.MentorshipSystemApplication"
         android:theme="@style/AppTheme">
         <activity
             android:name=".view.LoginActivity"
@@ -27,6 +28,9 @@
         <activity android:name=".view.RegisterActivity"
             android:label="@string/activity_register_title"
             android:theme="@style/AppTheme.NoActionBar"/>
+
+        <activity android:name=".view.MainActivity"
+            android:label="@string/activity_main_title"/>
     </application>
 
 </manifest>
