--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.ui.SplashScreenActivity">
+        <activity android:name=".view.ui.activities.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.ui.LoginActivity" />
+        <activity android:name=".view.ui.activities.LoginActivity" />
+        <activity
+            android:name=".view.ui.activities.MainActivity"
+            android:label="@string/title_activity_main"/>
     </application>
 
 </manifest>
