--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,10 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
-    compileSdkVersion Versions.compileSdkVersion
+    compileSdkVersion 27
     defaultConfig {
         applicationId "org.systers.mentorship"
         minSdkVersion Versions.minSdkVersion
@@ -20,26 +22,28 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation Dependencies.kotlin_stdlib
+    kapt Dependencies.databinding
     implementation Dependencies.appcompat_v7
+    implementation Dependencies.design
     implementation Dependencies.constraint_layout
     testImplementation Dependencies.junit
     androidTestImplementation Dependencies.test_runner
     androidTestImplementation Dependencies.espresso
-
     implementation Dependencies.rx_java
     implementation Dependencies.rx_android
     implementation Dependencies.rx_kotlin
-
     implementation Dependencies.retrofit
     implementation Dependencies.retrofit_gson_converter
     implementation Dependencies.retrofit_rxjava2_adapter
     implementation Dependencies.okhttp3_logging_interceptor
-
     implementation Dependencies.lifecycle_extensions
     implementation Dependencies.lifecycle_viewmodel
 }
